bug fixes - overflow of body content, conditional added.

--- a/wp-content/themes/psychoMunkee/assets/sass/modules/_base.scss
+++ b/wp-content/themes/psychoMunkee/assets/sass/modules/_base.scss
@@ -16,10 +16,10 @@ body {
   color: $white;
   text-align: center;
   &.mobile{
-    &.contactMe{
+    &.overflow-content{
      overflow: scroll;
     }
-    .container-fluid{
+    .container-fluid,{
       overflow-y: scroll;
     }
   }
